--- a/decor-landing.html
+++ b/decor-landing.html
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <header class="relative h-screen">
         <div class="absolute inset-0">
-            <img src="/api/placeholder/800/600" alt="Hero Image" class="w-full h-full object-cover">
+            <img src="/images/showroom.jpg" alt="Hero Image" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-black bg-opacity-40"></div>
         </div>
         <div class="relative h-full flex items-center justify-center text-center px-4">
@@ -54,14 +54,14 @@
             <div class="wooden-doors-slider">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div class="product-slide rounded-lg overflow-hidden shadow-lg">
-                        <img src="/api/placeholder/400/600" alt="Wooden Door 1" class="w-full h-full object-cover">
+                        <img src="/images/door.jpeg" alt="Wooden Door 1" class="w-full h-full object-cover">
                         <div class="p-4 bg-white">
                             <h3 class="font-bold text-xl">Classic Wooden Door</h3>
                             <p class="text-gray-600">Premium teak wood construction</p>
                         </div>
                     </div>
                     <div class="product-slide rounded-lg overflow-hidden shadow-lg">
-                        <img src="/api/placeholder/400/600" alt="Wooden Door 2" class="w-full h-full object-cover">
+                        <img src="/images/door.jpeg" alt="Wooden Door 2" class="w-full h-full object-cover">
                         <div class="p-4 bg-white">
                             <h3 class="font-bold text-xl">Modern Wooden Door</h3>
                             <p class="text-gray-600">Contemporary design with natural finish</p>
@@ -78,14 +78,14 @@
             <div class="upvc-windows-slider">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                     <div class="product-slide rounded-lg overflow-hidden shadow-lg">
-                        <img src="/api/placeholder/400/600" alt="UPVC Window 1" class="w-full h-full object-cover">
+                        <img src="/images/door.jpeg" alt="UPVC Window 1" class="w-full h-full object-cover">
                         <div class="p-4 bg-white">
                             <h3 class="font-bold text-xl">Sliding UPVC Window</h3>
                             <p class="text-gray-600">Energy efficient with double glazing</p>
                         </div>
                     </div>
                     <div class="product-slide rounded-lg overflow-hidden shadow-lg">
-                        <img src="/api/placeholder/400/600" alt="UPVC Window 2" class="w-full h-full object-cover">
+                        <img src="/images/door.jpeg" alt="UPVC Window 2" class="w-full h-full object-cover">
                         <div class="p-4 bg-white">
                             <h3 class="font-bold text-xl">Casement UPVC Window</h3>
                             <p class="text-gray-600">Sound-proof with weather resistance</p>
@@ -101,11 +101,11 @@
         <h2 class="text-3xl font-bold text-center mb-12">Our Craftsmanship</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
             <div class="rounded-lg overflow-hidden shadow-lg aspect-video">
-                <img src="/api/placeholder/600/400" alt="Video Placeholder 1" class="w-full h-full object-cover">
+                <img src="/images/door.jpeg" alt="Video Placeholder 1" class="w-full h-full object-cover">
                 <!-- Replace with actual video embed -->
             </div>
             <div class="rounded-lg overflow-hidden shadow-lg aspect-video">
-                <img src="/api/placeholder/600/400" alt="Video Placeholder 2" class="w-full h-full object-cover">
+                <img src="/images/door.jpeg" alt="Video Placeholder 2" class="w-full h-full object-cover">
                 <!-- Replace with actual video embed -->
             </div>
         </div>
@@ -116,7 +116,7 @@
         <h2 class="text-3xl font-bold text-center mb-12">Visit Our Stores</h2>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
             <div class="rounded-lg overflow-hidden shadow-lg bg-white">
-                <img src="/api/placeholder/400/300" alt="Store 1" class="w-full h-48 object-cover">
+                <img src="/images/door.jpeg" alt="Store 1" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2">Main Showroom</h3>
                     <p class="text-gray-600 mb-4">123 Main Street<br>City, State 12345</p>
@@ -138,7 +138,7 @@
                 </div>
             </div>
             <div class="rounded-lg overflow-hidden shadow-lg bg-white">
-                <img src="/api/placeholder/400/300" alt="Store 2" class="w-full h-48 object-cover">
+                <img src="/images/door.jpeg" alt="Store 2" class="w-full h-48 object-cover">
                 <div class="p-6">
                     <h3 class="font-bold text-xl mb-2">Design Center</h3>
                     <p class="text-gray-600 mb-4">456 Design Avenue<br>City, State 12345</p>
